fixed layout issue due to card css

--- a/src/Components/Tasks.css
+++ b/src/Components/Tasks.css
@@ -3,6 +3,7 @@ display:flex;
 align-items:center;
 width:100%;
 justify-content: space-between;
+padding:10px;
 }
 .todo-description {
 display:flex;
